--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,5 @@
 {
-  "PAGES": {
-    "HOME": {
-      "TITLE": "App works !",
-      "GO_TO_DETAIL": "Go to Detail"
-    },
-    "DETAIL": {
-      "TITLE": "Detail page !",
-      "BACK_TO_HOME": "Back to Home"
-    }
+  "CHAT": {
+    "SEND_MESSAGE_TEXTAREA": "Send a message"
   }
 }
