feat: Add selector for twitch channels (add button is still a mock)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "CHAT": {
-    "SEND_MESSAGE_TEXTAREA": "Send a message"
+    "SEND_MESSAGE_TEXTAREA": "Send a message",
+    "COMBINED": "Combined"
   }
 }
