--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,6 @@
 {
   "CHAT": {
-    "SEND_MESSAGE_TEXTAREA": "Eine Nachricht senden"
+    "SEND_MESSAGE_TEXTAREA": "Eine Nachricht senden",
+    "COMBINED": "Kombiniert"
   }
 }
