feat: Enable "sendMessage" function - Add some convenience stuff - Implement component for twitch styled buttons (might add some other colors later)

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -11,6 +11,7 @@
         "SAVE": "Speichern"
       }
     },
+    "SEND_MESSAGE": "Chat",
     "SEND_MESSAGE_TEXTAREA": "Eine Nachricht senden",
     "COMBINED": "Kombiniert"
   }
