feat: Upload code after flood

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -11,6 +11,9 @@
         "SAVE": "Speichern"
       }
     },
+    "EMOTES": {
+      "SEARCH": "Emotes suchen"
+    },
     "SEND_MESSAGE": "Chat",
     "SEND_MESSAGE_TEXTAREA": "Eine Nachricht senden",
     "COMBINED": "Kombiniert"
